install/kubernetes/prometheus/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: prometheus
spec:
  rules:
    - host: prometheus.kpaas.nsini.com
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 9090
